# murulang

./: .gitignore  Cargo.toml  README.md  example.muru
examples/: example.muru
src/: ast.rs  command.rs  err.rs  main.rs  muru.pest  parser.rs  stdlib.rs  wasm.rs  wat.rs
src/ast/: call.rs  expression.rs  function.rs  operator.rs  program.rs  util.rs  variable.rs  variable_name.rs
src/command/: build.rs  run.rs
src/err/: argument_error.rs  function_already_defined_error.rs  function_case_missing_error.rs  function_case_unreachable_error.rs  function_not_found_error.rs  no_function_matches_error.rs  not_implemented_error.rs  operator_argument_error.rs  standard_error.rs  type_mismatch_error.rs  untyped_function_error.rs
src/parser/: muru.pest
src/stdlib/: printc.rs  printi.rs
wasm/: Cargo.toml
wasm/src/: expression.rs  instructions.rs  lib.rs  modules.rs
wasm/src/instructions/: helpers.rs  numeric.rs  variable.rs
wasm/src/modules/: call.rs  export.rs  func.rs  import.rs  local.rs  memory.rs  module.rs  param.rs  result.rs
wat/: Cargo.toml
wat/src/: lib.rs
