[package]
name = "murulang"
version = "0.1.0"
authors = ["Henry Muru Paenga <meringu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

from-pest = "0.3.1"
pest = "2.1.3"
pest_derive = "2.1.0"
pest-ast = "0.3.3"

