[package]
name = "murulang"
version = "0.1.0"
authors = ["Henry Muru Paenga <meringu@gmail.com>"]
edition = "2018"

[workspace]
members = ["wat", "wasm"]

[dependencies]

wat = { path = "./wat" }
wasm = { path = "./wasm" }

clap = "3.0.0-beta.2"
env_logger = "0.8.3"
from-pest = "0.3.1"
log = "0.4.14"
pest = "2.1.3"
pest_derive = "2.1.0"
pest-ast = "0.3.3"
wabt = "0.9.1"